# LibNative

./: .gitignore  CMakeLists.txt  NativeExport.sln  README.md
.github/workflows/: build.yml  release.yml
lib/: libfunchook.so.2.0.0
lib/cmake/zydis/: zydis-targets.cmake
src/: NativeExport.vcxproj  NativeExport.vcxproj.filters  export.cpp  hook.c  hook.cpp  native.cpp
